--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,6 @@
 	<groupId>com.example</groupId>
 	<artifactId>pipeline</artifactId>
 	<packaging>war</packaging>
-	<name>pipeline</name>
 	<description>Demo project for Spring Boot</description>
 
 	<properties>
@@ -48,6 +47,8 @@
 	</dependencies>
 
 	<build>
+			<finalName>pipeline</finalName>
+
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
