--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
 	</parent>
 	<groupId>com.example</groupId>
 	<artifactId>pipeline</artifactId>
+	<packaging>war</packaging>
 	<description>Demo project for Spring Boot</description>
 
 	<properties>
